fix for extension case build break